Crash under cycles rendering using F12 #44514

Closed
opened 2015-04-26 02:43:17 +02:00 by Nahuel Belich · 16 comments

System Information
win 7 x64

Blender Version
Broken: blender-2.74-Hash: 3bffcc6

Worked: blender-2.74- Hash: 9b99786

Short description of error
DESCRIPTION AND STEPS ----->>>https://youtu.be/khIN2UbcnZw

Blender crashes when F12 its use to render but rendering from the interface it works fine. The other thing is that i only was able to reproduce the crash using that object with that armature, if you remove the armature from the object it also renders ok. . .

To sum up, the leg object+armature modifier+F12 to render = crash
if any of the previous variables are remove it works ok.

Exact steps for others to reproduce the error
1- open fork12.blend
2- USE F12 to render
3- if it not crash move a bit the viewport and try again.

how to avoid crash
A
1- open fork12.blend
2- Use the render button on the properties panel to render a frame.
B
1-open fork12.blend
2-select the object "PIERNAS"
3- remove modifiers
4- render using f12 or interface button, it shouldn´t crash

NOTE:
1-I also try using the gooseberry version from buildbot and also crashes, ill try again with the next version of tomorrow Sunday.

NOTE:
2-I did that video to try to explain a bit better the problem, not sure if it possible to reproduce the bug under different circumstances i did the best i could to get the simplest sample of the file, even removing the materials reduce the percentage of crashes but still crashes though, the two only things that avoid crashes are, render from the interface or removing the armature modifier.

**System Information** win 7 x64 **Blender Version** Broken: blender-2.74-Hash: 3bffcc6 Worked: blender-2.74- Hash: 9b99786 **Short description of error** DESCRIPTION AND STEPS ----->>>https://youtu.be/khIN2UbcnZw Blender crashes when F12 its use to render but rendering from the interface it works fine. The other thing is that i only was able to reproduce the crash using that object with that armature, if you remove the armature from the object it also renders ok. . . To sum up, the leg object+armature modifier+F12 to render = crash if any of the previous variables are remove it works ok. **Exact steps for others to reproduce the error** 1- open [fork12.blend](https://archive.blender.org/developer/F166863/fork12.blend) 2- USE F12 to render 3- if it not crash move a bit the viewport and try again. how to avoid crash A 1- open [fork12.blend](https://archive.blender.org/developer/F166863/fork12.blend) 2- Use the render button on the properties panel to render a frame. B 1-open [fork12.blend](https://archive.blender.org/developer/F166863/fork12.blend) 2-select the object "PIERNAS" 3- remove modifiers 4- render using f12 or interface button, it shouldn´t crash NOTE: 1-I also try using the gooseberry version from buildbot and also crashes, ill try again with the next version of tomorrow Sunday. NOTE: 2-I did that video to try to explain a bit better the problem, not sure if it possible to reproduce the bug under different circumstances i did the best i could to get the simplest sample of the file, even removing the materials reduce the percentage of crashes but still crashes though, the two only things that avoid crashes are, render from the interface or removing the armature modifier.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @mont29

Added subscriber: @mont29

I cannot reproduce the crash at all here (linux64, using both release and debug builds)…

I cannot reproduce the crash at all here (linux64, using both release and debug builds)…

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Cannot reproduce it eiter, Windows x64, 8dd055c

Cannot reproduce it eiter, Windows x64, 8dd055c

Marking as incomplete now, we need a way to reproduce this.

Marking as incomplete now, we need a way to reproduce this.

Added subscribers: @Sergey, @ideasman42

Added subscribers: @Sergey, @ideasman42

Switching to unconfirmed, thanks for the report but if no dev is able to reproduce it within two weeks we'll have to close it…

Switching to unconfirmed, thanks for the report but if no dev is able to reproduce it within two weeks we'll have to close it…
Author

thanks for testing
i just downloaded both 32 and 64 version of the las build blender-2.74-3bffcc6 for windows, both still crash the same way, actually now also crash rendering using the button in the interface(but using the interface its a really random crash), so the deal must be among the object and the armature, removing the armature worked really well for me in my tests, maybe its on the material, i leave the material because removing it didn`t fully stabilized the render but made the crashes more random.

I also managed to get a laptop to test on other computer using this lastest builds,
WIn 7 home starter x86 32
Amd E-450 APU
same crash.

Yesterday i also try to test it under ubuntu 14.04 booting from a pendrive but when i try to uncompress the files downloaded from builder.blender.org it returns some corrupted files and when i try to uncompress under ubuntu unity also pops an error, something about linked libraries. . . :\ not sure. So a wasn´t able to properly test the bug under linux.

thanks for testing i just downloaded both 32 and 64 version of the las build blender-2.74-3bffcc6 for windows, both still crash the same way, actually now also crash rendering using the button in the interface(but using the interface its a really random crash), so the deal must be among the object and the armature, removing the armature worked really well for me in my tests, maybe its on the material, i leave the material because removing it didn`t fully stabilized the render but made the crashes more random. I also managed to get a laptop to test on other computer using this lastest builds, WIn 7 home starter x86 32 Amd E-450 APU same crash. Yesterday i also try to test it under ubuntu 14.04 booting from a pendrive but when i try to uncompress the files downloaded from builder.blender.org it returns some corrupted files and when i try to uncompress under ubuntu unity also pops an error, something about linked libraries. . . :\ not sure. So a wasn´t able to properly test the bug under linux.
Author

after two more hours testing, i had reduce the sample file down to a single case egg_crash.blend the broken egg.

1- Open that file on a windows os using the latest build hash: bc160d8 or "3524676036c370822344f1c80b191d34644b3745"
2- f12 to render
3- crash

this simple file its done using an sphere with a armature and a subdivision surface modifier, and render from a maximize area (shift+spacebar)

i share this at irc blendercoders and gaia confirm the bug, also said that -"when i press F12 then i get an exception and in visual studio i see this stacktrace: http://www.pasteall.org/58065"-

(probably the title of the report its a bit misleading now)

after two more hours testing, i had reduce the sample file down to a single case [egg_crash.blend](https://archive.blender.org/developer/F167027/egg_crash.blend) the broken egg. 1- Open that file on a windows os using the latest build hash: bc160d8 or "3524676036c370822344f1c80b191d34644b3745" 2- f12 to render 3- crash this simple file its done using an sphere with a armature and a subdivision surface modifier, and render from a maximize area (shift+spacebar) i share this at irc blendercoders and gaia confirm the bug, also said that -"when i press F12 then i get an exception and in visual studio i see this stacktrace: http://www.pasteall.org/58065"- (probably the title of the report its a bit misleading now)

Can confirm crash with egg_crash file on Windows x64.

Can confirm crash with egg_crash file on Windows x64.

Seems to be windows specific issue, still cannot reproduce the issue on linux, even with an asan build.

Only glitch I have is a 'noisy' image before first tile is rendered, as if we were reading uninitialized mem or so…

Seems to be windows specific issue, still cannot reproduce the issue on linux, even with an asan build. Only glitch I have is a 'noisy' image before first tile is rendered, as if we were reading uninitialized mem or so…

This issue was referenced by b315fcb7ed

This issue was referenced by b315fcb7edb7222c97facc2413d3772702533dd2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b315fcb7ed.

Closed by commit b315fcb7ed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44514
No description provided.