Fix T44514 Crash under cycles rendering using F12, based on patch from Gaia Clary